# SuperShiny

./: .gitignore  Accessor.cpp  Accessor.h  CMakeLists.txt  CMakePresets.json  DrawContext.cpp  DrawContext.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Factory.cpp  Factory.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  INSTALL.md  InputBinding.cpp  InputManager.cpp  InputManager.h  InputPad.cpp  InputPad.h  LICENSE.md  Level.cpp  Level.h  Menu.h  MenuCommand.h  MenuManager.h  MenuRenderer.cpp  MenuRenderer.h  Orb.cpp  PassKey.h  Program.cpp  Program.h  README.md  Scene.h  SceneChanger.cpp  (+22 more)
Levels/: level1.ini  level1.lvl  level2.lvl
Resource/: SuperShiny.rc
Source/: Accessor.cpp  Accessor.h  Engine.h  EntityManager.h  Game.h  GameWorld.cpp  InputManager.h  Level.h  MenuCommand.h  MenuItem.h  Orb.h  Program.cpp  SplashScreen.cpp  SplashScreen.h  Sprite.h  WindowManager.h  main.cpp
Source/SuperShiny/: Bubble.cpp  Bubble.h  Orb.cpp  Orb.h  Shiny.cpp  Shiny.h  SplashScreen.cpp  SplashScreen.h  SuperShiny.cpp  SuperShiny.h  TitleScreen.cpp  TitleScreen.h  VictoryScreen.cpp  VictoryScreen.h
Source/ssge/: Accessor.cpp  Accessor.h  AudioManager.h  DrawContext.cpp  DrawContext.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  GameWorld.cpp  GameWorld.h  IGame.h  IniFile.h  InputBinding.h  InputManager.cpp  InputManager.h  InputPad.cpp  InputPad.h  InputSet.h  Level.cpp  Level.h  MenuContext.cpp  MenuContext.h  MenuManager.cpp  MenuRenderer.cpp  MenuSystem.cpp  MenuSystem.h  PassKey.h  Program.cpp  Program.h  Scene.h  SceneManager.cpp  SceneManager.h  SdlTexture.h  Sprite.cpp  Sprite.h  StepContext.cpp  (+4 more)
Tools/: WithEXE_Mirror.cpp
WithEXE/Backgrounds/: bkgCloser_Suburbs.pdn  bkgFarComplexes.pdn  bkgFar_Suburbs.pdn
WithEXE/Levels/: level1.ini  level2-.ini  level2.ini
